--- a/project.html
+++ b/project.html
@@ -1,10 +1,3 @@
-<!-- 
--*- coding: utf-8 -*-
-# @Author: HeinHtetAung
-# @Date:   2019-05-27 10:31:00
-# @Last modified by:   Hein Htet Aung
-# @Last Modified time: 2019-05-27 11:39:39
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,106 +21,126 @@
 <body>
 	<div class="container-fluid">
 		<div class="row">
-			<div class="panel">
-				<div class="panel-heading bg-danger">
-					<div class="span4">
-						<img src="img/coffee1.jpg" class="img-circle img-left" width="100px" height="100px">
-						<h1>Coffee World</h1>
-						<small>Without coffee something missing</small>
-					</div>
+			<div class="media">
+				<div class="media-left">
+					<img src="img/coffee1.jpg" class="img-circle img-left" width="100px" height="100px">
 				</div>
-				<div class="panel-body">
-					<nav class="nav navbar-default navbar-inverse">
-						<button class="navbar-toggle" data-toggle="collapse" data-target="#one">
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-						<div class="navbar-collapse collapse" id="one">
-							<ul class="nav navbar-nav">
-								<li class="active"><a>Home</a></li>
-								<li><a>About</a></li>
-								<li><a>Menu</a></li>
-								<li><a>Special</a></li>
-								<li><a>Events</a></li>
-								<li><a>Contact</a></li>
-							</ul>
-							<form class="navbar-form navbar-right">
-								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Search..." name="">
-									<a><span class="glyphicon glyphicon-search"></span></a>
-								</div>
-								<a><span class="glyphicon glyphicon-shopping-cart"></span></a>
-							</form>
-						</div>
-					</nav>
-					<div class="col-md-12 col-md-offset-4">
-						<h1><u>What We Offer</u></h1>
-					</div>
-					<div class="well">
-						<div class="text-center">
-							<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam quaerat dolores est accusantium exercitationem itaque eos cum odit aut quia. Minus veritatis repudiandae earum quod corrupti quaerat quisquam rem quidem.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam quaerat dolores est accusantium exercitationem itaque eos cum odit aut quia. Minus veritatis repudiandae earum quod corrupti quaerat quisquam rem quidem.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam quaerat dolores est accusantium exercitationem itaque eos cum odit aut quia. Minus veritatis repudiandae earum quod corrupti quaerat quisquam rem quidem.</p>
-						</div>
-						<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-md-offset-1">
-							<h1>Coffee</h1>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At reprehenderit dolorum temporibus non, fuga eligendi quae minima nostrum voluptatem praesentium. Earum fugiat ratione soluta! Amet, perspiciatis blanditiis et alias doloremque.</p>
-						</div>
-						<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-md-offset-1">
-							<h1>Cakes</h1>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At reprehenderit dolorum temporibus non, fuga eligendi quae minima nostrum voluptatem praesentium. Earum fugiat ratione soluta! Amet, perspiciatis blanditiis et alias doloremque.</p>
-						</div>
-						<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-md-offset-1">
-							<h1>Juice</h1>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At reprehenderit dolorum temporibus non, fuga eligendi quae minima nostrum voluptatem praesentium. Earum fugiat ratione soluta! Amet, perspiciatis blanditiis et alias doloremque.</p>
-						</div>
-					</div>
-					<div class="col-md-12 col-md-offset-4">
-						<h1><u>OUR SHOP</u></h1>
-					</div>
-					<div class="col-md-12">
-						<img src="img/coffee1.jpg" class="img img-thumbnail" width="200px" height="200px">
-						<img src="img/coffee2.jpg" class="img img-thumbnail" width="200px" height="200px">
-						<img src="img/coffee3.jpg" class="img img-thumbnail" width="200px" height="200px">
-						<img src="img/coffee4.jpg" class="img img-thumbnail" width="200px" height="200px">
-						<img src="img/coffee5.jpg" class="img img-thumbnail" width="200px" height="200px">
-						<img src="img/coffee1.jpg" class="img img-thumbnail" width="200px" height="200px">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At reprehenderit dolorum temporibus non, fuga eligendi quae minima nostrum voluptatem praesentium. Earum fugiat ratione soluta! Amet, perspiciatis blanditiis et alias doloremque.</p>
-					</div>
-					<div class="col-md-12 col-md-offset-4">
-						<h1><u>OUR SPECIAL</u></h1>
-					</div>
-					<div class="text-center">
-						<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam quaerat dolores est accusantium exercitationem itaque eos cum odit aut quia. Minus veritatis repudiandae earum quod corrupti quaerat quisquam rem quidem.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam quaerat dolores est accusantium exercitationem itaque eos cum odit aut quia. Minus veritatis repudiandae earum quod corrupti quaerat quisquam rem quidem.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam quaerat dolores est accusantium exercitationem itaque eos cum odit aut quia. Minus veritatis repudiandae earum quod corrupti quaerat quisquam rem quidem.</p>
-					</div><br><br>
-					<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-md-offset-1 table-bordered">
-						<img src="img/coffee2.jpg" class="img img-thumbnail" width="200px" height="200px"><br>
-						<div class="glyphicon glyphicon-star"></div><div class="glyphicon glyphicon-star"></div><div class="glyphicon glyphicon-star"></div><div class="glyphicon glyphicon-star"></div>
-						<h1 class="font-weight-bold">Espresso</h1>
-						<p class="text-warning">5,000 MMK</p>
-						<a class="btn btn-warning"><span class="glyphicon glyphicon-shopping-cart"></span>Buy Now</a>
-					</div>
-					<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-md-offset-1 table-bordered">
-						<img src="img/coffee1.jpg" class="img img-thumbnail" width="200px" height="200px"><br>
-						<div class="glyphicon glyphicon-star"></div><div class="glyphicon glyphicon-star"></div><div class="glyphicon glyphicon-star"></div><div class="glyphicon glyphicon-star"></div>
-						<h1 class="font-weight-bold">Espresso</h1>
-						<p class="text-warning">5,000 MMK</p>
-						<a class="btn btn-warning"><span class="glyphicon glyphicon-shopping-cart"></span>Buy Now</a>
-					</div>
-					<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-md-offset-1 table-bordered">
-						<img src="img/coffee3.jpg" class="img img-thumbnail" width="200px" height="200px"><br>
-						<div class="glyphicon glyphicon-star"></div><div class="glyphicon glyphicon-star"></div><div class="glyphicon glyphicon-star"></div><div class="glyphicon glyphicon-star"></div>
-						<h1 class="font-weight-bold">Espresso</h1>
-						<p class="text-warning">5,000 MMK</p>
-						<a class="btn btn-warning"><span class="glyphicon glyphicon-shopping-cart"></span>Buy Now</a>
-					</div>
-				</div>
-				<div class="panel-footer">
-					<p>Copyright&copy;2019 Developed By Hein Htet Aung <span class="navbar-right glyphicon glyphicon-bookmark"></span></p>
+				<div class="media-body">
+					<h1>Coffee World</h1>
+					<small>Without coffee something missing</small>
 				</div>
 			</div>
+		</div><!-- first row end -->
+		<div class="row"><!-- second row start -->
+			<nav class="nav navbar-default navbar-inverse">
+				<button class="navbar-toggle" data-toggle="collapse" data-target="#one">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<div class="navbar-collapse collapse" id="one">
+					<ul class="nav navbar-nav">
+						<li class="active"><a>Home</a></li>
+						<li><a href="about.html">About</a></li>
+						<li><a href="menu.html">Menu</a></li>
+						<li><a href="event.html">Events</a></li>
+						<li><a href="contact.html">Contact</a></li>
+					</ul>
+					<form class="navbar-form navbar-right">
+						<div class="form-group">
+							<input type="text" class="form-control" placeholder="Search..." name="">
+							<a><span class="glyphicon glyphicon-search"></span></a>
+						</div>
+						<a><span class="glyphicon glyphicon-shopping-cart"></span></a>
+					</form>
+				</div>
+			</nav>
+			<div class="text-center">
+				<br><br><h1><u>What We Offer</u></h1><br><br>
+			</div>
+			<div class="well">
+				<div class="text-center">
+					<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam quaerat dolores est accusantium exercitationem itaque eos cum odit aut quia. Minus veritatis repudiandae earum quod corrupti quaerat quisquam rem quidem.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam quaerat dolores est accusantium exercitationem itaque eos cum odit aut quia. Minus veritatis repudiandae earum quod corrupti quaerat quisquam rem quidem.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam quaerat dolores est accusantium exercitationem itaque eos cum odit aut quia. Minus veritatis repudiandae earum quod corrupti quaerat quisquam rem quidem.</p>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-md-offset-1">
+					<br><br><h1>Coffee</h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At reprehenderit dolorum temporibus non, fuga eligendi quae minima nostrum voluptatem praesentium. Earum fugiat ratione soluta! Amet, perspiciatis blanditiis et alias doloremque.</p><br><br>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-md-offset-1">
+					<br><br><h1>Cakes</h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At reprehenderit dolorum temporibus non, fuga eligendi quae minima nostrum voluptatem praesentium. Earum fugiat ratione soluta! Amet, perspiciatis blanditiis et alias doloremque.</p><br><br>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-md-offset-1">
+					<br><br><h1>Juice</h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At reprehenderit dolorum temporibus non, fuga eligendi quae minima nostrum voluptatem praesentium. Earum fugiat ratione soluta! Amet, perspiciatis blanditiis et alias doloremque.</p><br><br>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-md-offset-1 table-bordered">
+				<img src="img/coffee2.jpg" class="img img-thumbnail" width="200px" height="200px"><br>
+				<div class="glyphicon glyphicon-star"></div><div class="glyphicon glyphicon-star"></div><div class="glyphicon glyphicon-star"></div><div class="glyphicon glyphicon-star"></div>
+				<h1 class="font-weight-bold">Espresso</h1>
+				<p class="text-warning">5,000 MMK</p>
+				<a class="btn btn-warning"><span class="glyphicon glyphicon-shopping-cart"></span>Buy Now</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-md-offset-1 table-bordered">
+				<img src="img/coffee1.jpg" class="img img-thumbnail" width="200px" height="200px"><br>
+				<div class="glyphicon glyphicon-star"></div><div class="glyphicon glyphicon-star"></div><div class="glyphicon glyphicon-star"></div><div class="glyphicon glyphicon-star"></div>
+				<h1 class="font-weight-bold">Espresso</h1>
+				<p class="text-warning">5,000 MMK</p>
+				<a class="btn btn-warning"><span class="glyphicon glyphicon-shopping-cart"></span>Buy Now</a>
+			</div>
+			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-md-offset-1 table-bordered">
+				<img src="img/coffee3.jpg" class="img img-thumbnail" width="200px" height="200px"><br>
+				<div class="glyphicon glyphicon-star"></div><div class="glyphicon glyphicon-star"></div><div class="glyphicon glyphicon-star"></div><div class="glyphicon glyphicon-star"></div>
+				<h1 class="font-weight-bold">Espresso</h1>
+				<p class="text-warning">5,000 MMK</p>
+				<a class="btn btn-warning"><span class="glyphicon glyphicon-shopping-cart"></span>Buy Now</a>
+			</div>
+		</div><!-- second row end -->
+		<div class="text-center"><!-- panel About Us start -->
+			<br><br><h1><u>About Us</u></h1><br><br>
 		</div>
-	</div>
-</div>
+		<div class="row"><!-- third row start -->
+			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-md-offset-1">
+				<img src="img/girl1.jpg" class="img-circle" width="200px" height="200px"><br>
+				<p class="glyphicon glyphicon-user">Pyae Phyo Myat</p><br>
+				<p class="glyphicon glyphicon-phone">+959331313</p><br>
+				<p class="glyphicon glyphicon-book">pyaephyomyatcu@gmail.com</p><br>
+				<p class="glyphicon glyphicon-bell">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At reprehenderit dolorum temporibus non, fuga eligendi quae minima nostrum voluptatem praesentium. Earum fugiat ratione soluta! Amet, perspiciatis blanditiis et alias doloremque.</p>
+			</div>
+			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-md-offset-1">
+				<img src="img/girl2.jpg" class="img-circle" width="200px" height="200px"><br>
+				<p class="glyphicon glyphicon-user">Than Than Soe</p><br>
+				<p class="glyphicon glyphicon-phone">+959331313</p><br>
+				<p class="glyphicon glyphicon-book">pyaephyomyatcu@gmail.com</p><br>
+				<p class="glyphicon glyphicon-bell">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At reprehenderit dolorum temporibus non, fuga eligendi quae minima nostrum voluptatem praesentium. Earum fugiat ratione soluta! Amet, perspiciatis blanditiis et alias doloremque.</p>
+			</div>
+			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-md-offset-1">
+				<img src="img/girl3.jpg" class="img-circle" width="200px" height="200px"><br>
+				<p class="glyphicon glyphicon-user">Khin Yu Hlaing</p><br>
+				<p class="glyphicon glyphicon-phone">+959331313</p><br>
+				<p class="glyphicon glyphicon-book">pyaephyomyatcu@gmail.com</p><br>
+				<p class="glyphicon glyphicon-bell">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At reprehenderit dolorum temporibus non, fuga eligendi quae minima nostrum voluptatem praesentium. Earum fugiat ratione soluta! Amet, perspiciatis blanditiis et alias doloremque.</p>
+			</div>
+			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-md-offset-1">
+				<img src="img/boy1.jpg" class="img-circle" width="200px" height="200px"><br>
+				<p class="glyphicon glyphicon-user">AKaRiz</p><br>
+				<p class="glyphicon glyphicon-phone">+959331313</p><br>
+				<p class="glyphicon glyphicon-book">pyaephyomyatcu@gmail.com</p><br>
+				<p class="glyphicon glyphicon-bell">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At reprehenderit dolorum temporibus non, fuga eligendi quae minima nostrum voluptatem praesentium. Earum fugiat ratione soluta! Amet, perspiciatis blanditiis et alias doloremque.</p>
+			</div>
+			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-md-offset-1">
+				<img src="img/boy2.jpg" class="img-circle" width="200px" height="200px"><br>
+				<p class="glyphicon glyphicon-user">Hein Htet Aung</p><br>
+				<p class="glyphicon glyphicon-phone">+959331313</p><br>
+				<p class="glyphicon glyphicon-book">pyaephyomyatcu@gmail.com</p><br>
+				<p class="glyphicon glyphicon-bell">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At reprehenderit dolorum temporibus non, fuga eligendi quae minima nostrum voluptatem praesentium. Earum fugiat ratione soluta! Amet, perspiciatis blanditiis et alias doloremque.</p>
+			</div>
+		</div><!-- about us end -->
+	</div><!-- row end -->
+</div><!-- panel end -->
+</div><!--  row end -->
+</div><!-- cointainer fluid end -->
 <!-- jQuery 3.4.1(necessary for Bootstrap's JavaScript plugins) -->
 <script src="./js/jquery-3.4.1.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
